content/v1.4.5/en/api/catalog-other.md
---
title: Other 类目录 / Class Catalog
extra:
  sidebar: auto
---
# Other Class Catalog

## Mental Model

Treat `Other Class Catalog` as an entry point or data node for this subsystem: inspect its properties first, then decide which methods to call.

This page lists every public type in this area from the 1.4.5 source, grouped by namespace. **183** types total, **175** with a deep doc page (linked). Auto-generated by `tools/gen-class-catalog.mjs`.

> Legend: C=class S=struct I=interface E=enum. 🔗 = has a deep doc page.

## (global) (9)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [BuildInfo](/v1.3.15/en/api/campaign-ext/BuildInfo) | 🔗 |
| C | [EmptyGamepadNavigationContext](/v1.3.15/en/api/campaign-ext/EmptyGamepadNavigationContext) | 🔗 |
| C | [GauntletGamepadNavigationContext](/v1.3.15/en/api/campaign-ext/GauntletGamepadNavigationContext) | 🔗 |
| I | [IChatHandler](/v1.3.15/en/api/campaign-ext/IChatHandler) | 🔗 |
| I | [IGamepadNavigationContext](/v1.3.15/en/api/campaign-ext/IGamepadNavigationContext) | 🔗 |
| C | [MonoNativeFunctionWrapperAttribute](/v1.3.15/en/api/campaign-ext/MonoNativeFunctionWrapperAttribute) | 🔗 |
| C | [MonoPInvokeCallbackAttribute](/v1.3.15/en/api/campaign-ext/MonoPInvokeCallbackAttribute) | 🔗 |
| C | [SceneProblemsLogger](./campaign-ext/SceneProblemsLogger) | 🔗 |
| E | [WindingOrder](/v1.3.15/en/api/campaign-ext/WindingOrder) | 🔗 |

## Jose (44)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AesCbcHmacEncryption](./campaign-ext/AesCbcHmacEncryption) | 🔗 |
| C | [AesGcm](./campaign-ext/AesGcm) | 🔗 |
| C | [AesGcmEncryption](./campaign-ext/AesGcmEncryption) | 🔗 |
| C | [AesGcmKeyWrapManagement](./campaign-ext/AesGcmKeyWrapManagement) | 🔗 |
| C | [AesKeyWrap](./campaign-ext/AesKeyWrap) | 🔗 |
| C | [AesKeyWrapManagement](./campaign-ext/AesKeyWrapManagement) | 🔗 |
| C | [Arrays](./campaign-ext/Arrays) | 🔗 |
| C | [Base64Url](./campaign-ext/Base64Url) | 🔗 |
| C | [Collections](./campaign-ext/Collections) | 🔗 |
| C | [Compact](./campaign-ext/Compact) | 🔗 |
| C | [ConcatKDF](./campaign-ext/ConcatKDF) | 🔗 |
| C | [DeflateCompression](./campaign-ext/DeflateCompression) | 🔗 |
| C | [Dictionaries](./campaign-ext/Dictionaries) | 🔗 |
| C | [DirectKeyManagement](./campaign-ext/DirectKeyManagement) | 🔗 |
| C | [EcdhKeyManagement](./campaign-ext/EcdhKeyManagement) | 🔗 |
| C | [EcdhKeyManagementWithAesKeyWrap](./campaign-ext/EcdhKeyManagementWithAesKeyWrap) | 🔗 |
| C | [EncryptionException](./campaign-ext/EncryptionException) | 🔗 |
| C | [Ensure](./campaign-ext/Ensure) | 🔗 |
| C | [HmacUsingSha](./campaign-ext/HmacUsingSha) | 🔗 |
| I | [ICompression](./campaign-ext/ICompression) | 🔗 |
| I | [IJsonMapper](./campaign-ext/IJsonMapper) | 🔗 |
| I | [IJwsAlgorithm](./campaign-ext/IJwsAlgorithm) | 🔗 |
| I | [IKeyManagement](./campaign-ext/IKeyManagement) | 🔗 |
| C | [IntegrityException](./campaign-ext/IntegrityException) | 🔗 |
| C | [InvalidAlgorithmException](./campaign-ext/InvalidAlgorithmException) | 🔗 |
| C | [Iterator](./campaign-ext/Iterator) | 🔗 |
| C | [JoseException](./campaign-ext/JoseException) | 🔗 |
| E | [JweAlgorithm](./campaign-ext/JweAlgorithm) | 🔗 |
| E | [JweCompression](./campaign-ext/JweCompression) | 🔗 |
| E | [JweEncryption](./campaign-ext/JweEncryption) | 🔗 |
| E | [JwsAlgorithm](./campaign-ext/JwsAlgorithm) | 🔗 |
| C | [JWT](./campaign-ext/JWT) | 🔗 |
| C | [JwtOptions](./campaign-ext/JwtOptions) | 🔗 |
| C | [JwtSettings](./campaign-ext/JwtSettings) | 🔗 |
| C | [NewtonsoftMapper](./campaign-ext/NewtonsoftMapper) | 🔗 |
| C | [PBKDF2](./campaign-ext/PBKDF2) | 🔗 |
| C | [Pbse2HmacShaKeyManagementWithAesKeyWrap](./campaign-ext/Pbse2HmacShaKeyManagementWithAesKeyWrap) | 🔗 |
| C | [Plaintext](./campaign-ext/Plaintext) | 🔗 |
| C | [RsaKeyManagement](./campaign-ext/RsaKeyManagement) | 🔗 |
| C | [RsaOaep](./campaign-ext/RsaOaep) | 🔗 |
| C | [RsaOaep256KeyManagement](./campaign-ext/RsaOaep256KeyManagement) | 🔗 |
| C | [RsaPss](./campaign-ext/RsaPss) | 🔗 |
| C | [RsaPssUsingSha](./campaign-ext/RsaPssUsingSha) | 🔗 |
| C | [RsaUsingSha](./campaign-ext/RsaUsingSha) | 🔗 |

## Jose.jwe (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| I | [IJweAlgorithm](./campaign-ext/IJweAlgorithm) | 🔗 |

## Jose.native (8)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [BCrypt](./campaign-ext/BCrypt) | 🔗 |
| S | [BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO](./campaign-ext/BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO) | 🔗 |
| S | [BCRYPT_KEY_LENGTHS_STRUCT](./campaign-ext/BCRYPT_KEY_LENGTHS_STRUCT) | 🔗 |
| S | [BCRYPT_OAEP_PADDING_INFO](./campaign-ext/BCRYPT_OAEP_PADDING_INFO) | 🔗 |
| S | [BCRYPT_PSS_PADDING_INFO](./campaign-ext/BCRYPT_PSS_PADDING_INFO) | 🔗 |
| C | [NCrypt](./campaign-ext/NCrypt) | 🔗 |
| C | [NCryptBuffer](./campaign-ext/NCryptBuffer) | 🔗 |
| C | [NCryptBufferDesc](./campaign-ext/NCryptBufferDesc) | 🔗 |

## Jose.netstandard1_4 (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [EcdsaUsingSha](./campaign-ext/EcdsaUsingSha) | 🔗 |

## MBHelpers (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | BannerHelper | — |

## Sandbox.View.GameStates (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [PreloadState](/v1.3.15/en/api/campaign-ext/PreloadState) | 🔗 |

## Sandobx.GauntletUI.Missions (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [GauntletMainAgentDetectionView](./campaign-ext/GauntletMainAgentDetectionView) | 🔗 |

## Security.Cryptography (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [EccKey](./campaign-ext/EccKey) | 🔗 |
| C | [RsaKey](./campaign-ext/RsaKey) | 🔗 |

## Storymode.Missions (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | MissionState | — |
| C | [SneakIntoTheVillaMissionController](./campaign-ext/SneakIntoTheVillaMissionController) | 🔗 |

## System.Management (53)

| | 名称 Name | 文档 Doc |
|---|---|---|
| E | [AuthenticationLevel](./campaign-ext/AuthenticationLevel) | 🔗 |
| E | [CimType](./campaign-ext/CimType) | 🔗 |
| E | [CodeLanguage](./campaign-ext/CodeLanguage) | 🔗 |
| E | [ComparisonSettings](./campaign-ext/ComparisonSettings) | 🔗 |
| C | [CompletedEventArgs](./campaign-ext/CompletedEventArgs) | 🔗 |
| C | [ConnectionOptions](./campaign-ext/ConnectionOptions) | 🔗 |
| C | [DeleteOptions](./campaign-ext/DeleteOptions) | 🔗 |
| C | [EnumerationOptions](./campaign-ext/EnumerationOptions) | 🔗 |
| C | [EventArrivedEventArgs](./campaign-ext/EventArrivedEventArgs) | 🔗 |
| C | [EventQuery](./campaign-ext/EventQuery) | 🔗 |
| C | [EventWatcherOptions](./campaign-ext/EventWatcherOptions) | 🔗 |
| E | [ImpersonationLevel](./campaign-ext/ImpersonationLevel) | 🔗 |
| C | [InvokeMethodOptions](./campaign-ext/InvokeMethodOptions) | 🔗 |
| C | [ManagementBaseObject](./campaign-ext/ManagementBaseObject) | 🔗 |
| C | [ManagementClass](./campaign-ext/ManagementClass) | 🔗 |
| C | [ManagementDateTimeConverter](./campaign-ext/ManagementDateTimeConverter) | 🔗 |
| C | [ManagementEventArgs](./campaign-ext/ManagementEventArgs) | 🔗 |
| C | [ManagementEventWatcher](./campaign-ext/ManagementEventWatcher) | 🔗 |
| C | [ManagementException](./campaign-ext/ManagementException) | 🔗 |
| C | [ManagementNamedValueCollection](./campaign-ext/ManagementNamedValueCollection) | 🔗 |
| C | [ManagementObject](./campaign-ext/ManagementObject) | 🔗 |
| C | [ManagementObjectCollection](./campaign-ext/ManagementObjectCollection) | 🔗 |
| C | [ManagementObjectEnumerator](./campaign-ext/ManagementObjectEnumerator) | 🔗 |
| C | [ManagementObjectSearcher](./campaign-ext/ManagementObjectSearcher) | 🔗 |
| C | [ManagementOperationObserver](./campaign-ext/ManagementOperationObserver) | 🔗 |
| C | [ManagementOptions](./campaign-ext/ManagementOptions) | 🔗 |
| C | [ManagementPath](./campaign-ext/ManagementPath) | 🔗 |
| C | [ManagementQuery](./campaign-ext/ManagementQuery) | 🔗 |
| C | [ManagementScope](./campaign-ext/ManagementScope) | 🔗 |
| E | [ManagementStatus](./campaign-ext/ManagementStatus) | 🔗 |
| C | [MethodData](./campaign-ext/MethodData) | 🔗 |
| C | [MethodDataCollection](./campaign-ext/MethodDataCollection) | 🔗 |
| C | [MethodDataEnumerator](./campaign-ext/MethodDataEnumerator) | 🔗 |
| C | [ObjectGetOptions](./campaign-ext/ObjectGetOptions) | 🔗 |
| C | [ObjectPutEventArgs](./campaign-ext/ObjectPutEventArgs) | 🔗 |
| C | [ObjectQuery](./campaign-ext/ObjectQuery) | 🔗 |
| C | [ObjectReadyEventArgs](./campaign-ext/ObjectReadyEventArgs) | 🔗 |
| C | [ProgressEventArgs](./campaign-ext/ProgressEventArgs) | 🔗 |
| C | [PropertyData](./campaign-ext/PropertyData) | 🔗 |
| C | [PropertyDataCollection](./campaign-ext/PropertyDataCollection) | 🔗 |
| C | [PropertyDataEnumerator](./campaign-ext/PropertyDataEnumerator) | 🔗 |
| C | [PutOptions](./campaign-ext/PutOptions) | 🔗 |
| E | [PutType](./campaign-ext/PutType) | 🔗 |
| C | [QualifierData](./campaign-ext/QualifierData) | 🔗 |
| C | [QualifierDataCollection](./campaign-ext/QualifierDataCollection) | 🔗 |
| C | [QualifierDataEnumerator](./campaign-ext/QualifierDataEnumerator) | 🔗 |
| C | [RelatedObjectQuery](./campaign-ext/RelatedObjectQuery) | 🔗 |
| C | [RelationshipQuery](./campaign-ext/RelationshipQuery) | 🔗 |
| C | [SelectQuery](./campaign-ext/SelectQuery) | 🔗 |
| C | [StoppedEventArgs](./campaign-ext/StoppedEventArgs) | 🔗 |
| E | [TextFormat](./campaign-ext/TextFormat) | 🔗 |
| C | [WqlEventQuery](./campaign-ext/WqlEventQuery) | 🔗 |
| C | [WqlObjectQuery](./campaign-ext/WqlObjectQuery) | 🔗 |

## System.Numerics (8)

| | 名称 Name | 文档 Doc |
|---|---|---|
| S | [Matrix3x2](./campaign-ext/Matrix3x2) | 🔗 |
| S | [Matrix4x4](./campaign-ext/Matrix4x4) | 🔗 |
| S | [Plane](./campaign-ext/Plane) | 🔗 |
| S | Quaternion | — |
| S | [Vector](./campaign-ext/Vector) | 🔗 |
| S | [Vector2](./campaign-ext/Vector2) | 🔗 |
| S | [Vector3](./campaign-ext/Vector3) | 🔗 |
| S | [Vector4](./campaign-ext/Vector4) | 🔗 |

## TaleWorlds.AchievementSystem (4)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Achievement](/v1.3.15/en/api/campaign-ext/Achievement) | 🔗 |
| C | [AchievementManager](/v1.3.15/en/api/campaign-ext/AchievementManager) | 🔗 |
| I | [IAchievementService](/v1.3.15/en/api/campaign-ext/IAchievementService) | 🔗 |
| C | [TestAchievementService](/v1.3.15/en/api/campaign-ext/TestAchievementService) | 🔗 |

## TaleWorlds.ActivitySystem (6)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [Activity](/v1.3.15/en/api/campaign-ext/Activity) | 🔗 |
| C | [ActivityManager](/v1.3.15/en/api/campaign-ext/ActivityManager) | 🔗 |
| E | [ActivityOutcome](/v1.3.15/en/api/campaign-ext/ActivityOutcome) | 🔗 |
| E | [ActivityTransition](/v1.3.15/en/api/campaign-ext/ActivityTransition) | 🔗 |
| I | [IActivityService](/v1.3.15/en/api/campaign-ext/IActivityService) | 🔗 |
| C | [TestActivityService](/v1.3.15/en/api/campaign-ext/TestActivityService) | 🔗 |

## TaleWorlds.Avatar.PlayerServices (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AvatarServices](/v1.3.15/en/api/campaign-ext/AvatarServices) | 🔗 |

## TaleWorlds.LinQuick (2)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [LinQuick](/v1.3.15/en/api/campaign-ext/LinQuick) | 🔗 |
| C | [Min](/v1.3.15/en/api/campaign-ext/Min) | 🔗 |

## TaleWorlds.ModuleManager (9)

| | 名称 Name | 文档 Doc |
|---|---|---|
| S | [DependedModule](/v1.3.15/en/api/campaign-ext/DependedModule) | 🔗 |
| C | Extensions | — |
| I | [IPlatformModuleExtension](/v1.3.15/en/api/campaign-ext/IPlatformModuleExtension) | 🔗 |
| E | [ModuleCategory](/v1.3.15/en/api/campaign-ext/ModuleCategory) | 🔗 |
| C | [ModuleHelper](/v1.3.15/en/api/campaign-ext/ModuleHelper) | 🔗 |
| C | [ModuleInfo](/v1.3.15/en/api/campaign-ext/ModuleInfo) | 🔗 |
| E | [ModuleType](/v1.3.15/en/api/campaign-ext/ModuleType) | 🔗 |
| C | [SubModuleInfo](/v1.3.15/en/api/campaign-ext/SubModuleInfo) | 🔗 |
| E | [SubModuleTags](/v1.3.15/en/api/campaign-ext/SubModuleTags) | 🔗 |

## TaleWorlds.Starter.Library (1)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | Program | — |

## psai.Editor (10)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | [AudioData](/v1.3.15/en/api/campaign-ext/AudioData) | 🔗 |
| E | [CompatibilityReason](/v1.3.15/en/api/campaign-ext/CompatibilityReason) | 🔗 |
| E | [CompatibilitySetting](/v1.3.15/en/api/campaign-ext/CompatibilitySetting) | 🔗 |
| E | [CompatibilityType](/v1.3.15/en/api/campaign-ext/CompatibilityType) | 🔗 |
| C | [Group](/v1.3.15/en/api/campaign-ext/Group) | 🔗 |
| C | [ProjectProperties](/v1.3.15/en/api/campaign-ext/ProjectProperties) | 🔗 |
| C | [PsaiMusicEntity](/v1.3.15/en/api/campaign-ext/PsaiMusicEntity) | 🔗 |
| C | [PsaiProject](/v1.3.15/en/api/campaign-ext/PsaiProject) | 🔗 |
| C | [Segment](/v1.3.15/en/api/campaign-ext/Segment) | 🔗 |
| C | [Theme](/v1.3.15/en/api/campaign-ext/Theme) | 🔗 |

## psai.net (19)

| | 名称 Name | 文档 Doc |
|---|---|---|
| C | AudioData | — |
| C | [AudioPlaybackLayerChannelStandalone](/v1.3.15/en/api/campaign-ext/AudioPlaybackLayerChannelStandalone) | 🔗 |
| S | [Follower](/v1.3.15/en/api/campaign-ext/Follower) | 🔗 |
| C | [PlaybackChannel](/v1.3.15/en/api/campaign-ext/PlaybackChannel) | 🔗 |
| C | [PsaiCore](/v1.3.15/en/api/campaign-ext/PsaiCore) | 🔗 |
| S | [PsaiInfo](/v1.3.15/en/api/campaign-ext/PsaiInfo) | 🔗 |
| E | [PsaiPlayMode](/v1.3.15/en/api/campaign-ext/PsaiPlayMode) | 🔗 |
| E | [PsaiResult](/v1.3.15/en/api/campaign-ext/PsaiResult) | 🔗 |
| E | [PsaiState](/v1.3.15/en/api/campaign-ext/PsaiState) | 🔗 |
| C | Segment | — |
| C | [SegmentInfo](/v1.3.15/en/api/campaign-ext/SegmentInfo) | 🔗 |
| E | [SegmentSuitability](/v1.3.15/en/api/campaign-ext/SegmentSuitability) | 🔗 |
| C | [Soundtrack](/v1.3.15/en/api/campaign-ext/Soundtrack) | 🔗 |
| C | [SoundtrackInfo](/v1.3.15/en/api/campaign-ext/SoundtrackInfo) | 🔗 |
| C | Theme | — |
| C | [ThemeInfo](/v1.3.15/en/api/campaign-ext/ThemeInfo) | 🔗 |
| E | [ThemeInterruptionBehavior](/v1.3.15/en/api/campaign-ext/ThemeInterruptionBehavior) | 🔗 |
| E | [ThemeType](/v1.3.15/en/api/campaign-ext/ThemeType) | 🔗 |
| C | [Weighting](/v1.3.15/en/api/campaign-ext/Weighting) | 🔗 |
